[gd_scene load_steps=8 format=2]

[ext_resource path="res://robot.jpg" type="Texture" id=1]
[ext_resource path="res://ChatBox.tscn" type="PackedScene" id=2]
[ext_resource path="res://partyGuestArea2D.gd" type="Script" id=3]
[ext_resource path="res://CollisionShape2D.gd" type="Script" id=4]
[ext_resource path="res://partyGuest.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 51, 45.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 53.5, 40 )

[node name="partyGuest" type="KinematicBody2D"]
position = Vector2( -103, 168 )
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]

[node name="Robot" type="Sprite" parent="Sprite"]
position = Vector2( 19.625, 13.6875 )
scale = Vector2( 0.225211, 0.250995 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 20, 13.5 )
shape = SubResource( 1 )

[node name="partyGuestArea2D" type="Area2D" parent="."]
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="partyGuestArea2D"]
position = Vector2( 19.5, 21 )
shape = SubResource( 2 )
script = ExtResource( 4 )

[node name="ChatBox" parent="partyGuestArea2D" instance=ExtResource( 2 )]
margin_left = -36.0
margin_top = -178.0
margin_right = 278.0
margin_bottom = -40.0

[connection signal="body_entered" from="partyGuestArea2D" to="partyGuestArea2D" method="_on_partyGuestArea2D_body_entered"]
[connection signal="body_exited" from="partyGuestArea2D" to="partyGuestArea2D" method="_on_partyGuestArea2D_body_exited"]
